--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,12 +2,13 @@ cmake_minimum_required(VERSION 3.0)
 project(brpc C CXX)
 
 if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 4.8)
-    message(FATAL_ERROR "GCC is too old, please install a newer version supporting C++11")
+    #message(FATAL_ERROR "GCC is too old, please install a newer version supporting C++11")
 endif()
 
 option(WITH_GLOG "With glog" OFF)
 option(BRPC_DEBUG "With debug symbol" ON)
 option(BUILD_EXAMPLE "Whether building examples" OFF)
+option(BUILD_UNIT_TESTS "Whether building unit tests" OFF)
 
 if(WITH_GLOG)
     set(WITH_GLOG_VAL "1")
@@ -94,4 +95,9 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 ADD_SUBDIRECTORY(src)
 if(BUILD_EXAMPLE)
     ADD_SUBDIRECTORY(example)
+endif()
+if(BUILD_UNIT_TESTS)
+    ADD_SUBDIRECTORY(test)
+    enable_testing ()
+    add_test (NAME test_butil COMMAND test_butil)
 endif()
