--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -34,6 +34,7 @@ foreach(PROTO ${brpc_policy_PROTOS})
     )
 endforeach()
 
+message("CMAKE_CXX_FLAGS=${CMAKE_CXX_FLAGS}")
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 include_directories(${CMAKE_SOURCE_DIR}/src)
 
