--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -1,3 +1,7 @@
+include(FindProtobuf)
+find_package(Protobuf REQUIRED)
+include_directories(${PROTOBUF_INCLUDE_DIR})
+
 add_subdirectory(http_c++)
 add_subdirectory(asynchronous_echo_c++)
 add_subdirectory(backup_request_c++)
