--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,22 +58,21 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CPP_FLAGS "-DBRPC_WITH_GLOG=${WITH_GLOG_VAL} -DGFLAGS_NS=${GFLAGS_NS}")
 set(CMAKE_CPP_FLAGS "${CMAKE_CPP_FLAGS} -DBTHREAD_USE_FAST_PTHREAD_MUTEX -D__const__= -D_GNU_SOURCE -DUSE_SYMBOLIZE -DNO_TCMALLOC -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS -D__STDC_CONSTANT_MACROS")
 set(CMAKE_CPP_FLAGS "${CMAKE_CPP_FLAGS} ${DEBUG_SYMBOL}")
-
 set(CMAKE_CXX_FLAGS "${CMAKE_CPP_FLAGS} -O2 -pipe -Wall -W -fPIC -fstrict-aliasing -Wno-invalid-offsetof -Wno-unused-parameter -fno-omit-frame-pointer")
 set(CMAKE_C_FLAGS "${CMAKE_CPP_FLAGS} -O2 -pipe -Wall -W -fPIC -fstrict-aliasing -Wno-unused-parameter -fno-omit-frame-pointer")
 SET(CMAKE_EXE_LINKER_FLAGS "-pthread")
 
-#required by butil/crc32.cc to boost performance for 10x
-if(NOT (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 4.4))
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -msse4 -msse4.2")
+if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+    #required by butil/crc32.cc to boost performance for 10x
+    if(NOT (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 4.4))
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -msse4 -msse4.2")
+    endif()
+    if(NOT (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 7.0))
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-aligned-new")
+    endif()
 endif()
 
-if(NOT (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 7.0))
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-aligned-new")
-endif()
-
-find_path(PROTOBUF_HEADER NAMES google/protobuf/stubs/common.h)
-find_library(PROTOBUF_LIB NAMES protobuf)
+include(FindProtobuf)
 
 find_path(LEVELDB_HEADER NAMES leveldb/db.h)
 find_library(LEVELDB_LIB NAMES leveldb)
@@ -88,9 +87,8 @@ find_library(PROTOC_LIB NAMES protoc)
 
 include_directories(
         ${GFLAGS_INCLUDE_PATH}
-        ${PROTOBUF_HEADER}
+        ${PROTOBUF_INCLUDE_DIRS}
         ${LEVELDB_HEADER}
-        ${THREAD_HEADER}
         )
 
 # for *.so
