--- a/example/memcache_c++/CMakeLists.txt
+++ b/example/memcache_c++/CMakeLists.txt
@@ -1,2 +1,7 @@
 add_executable(memcache_client client.cpp)
-target_link_libraries(memcache_client brpc)
+
+if(EXAMPLE_LINK_SO)
+    target_link_libraries(memcache_client brpc)
+else()
+    target_link_libraries(memcache_client brpc_static ${DYNAMIC_LIB})
+endif()
