--- a/example/multi_threaded_mcpack_c++/CMakeLists.txt
+++ b/example/multi_threaded_mcpack_c++/CMakeLists.txt
@@ -5,7 +5,12 @@ execute_process(
 )
 
 add_executable(multi_threaded_mcpack_client client.cpp ${CMAKE_CURRENT_BINARY_DIR}/echo.pb.cc)
-target_link_libraries(multi_threaded_mcpack_client brpc)
-
 add_executable(multi_threaded_mcpack_server server.cpp ${CMAKE_CURRENT_BINARY_DIR}/echo.pb.cc)
-target_link_libraries(multi_threaded_mcpack_server brpc)
+
+if(EXAMPLE_LINK_SO)
+    target_link_libraries(multi_threaded_mcpack_client brpc)
+    target_link_libraries(multi_threaded_mcpack_server brpc)
+else()
+    target_link_libraries(multi_threaded_mcpack_client brpc_static ${DYNAMIC_LIB})
+    target_link_libraries(multi_threaded_mcpack_server brpc_static ${DYNAMIC_LIB})
+endif()
