--- a/example/nshead_pb_extension_c++/CMakeLists.txt
+++ b/example/nshead_pb_extension_c++/CMakeLists.txt
@@ -3,7 +3,12 @@ get_filename_component(HEADER_DIR ${PROTO_HEADER} DIRECTORY)
 include_directories(${HEADER_DIR})
 
 add_executable(nshead_pb_extension_client client.cpp ${PROTO_SRC} ${PROTO_HEADER})
-target_link_libraries(nshead_pb_extension_client brpc)
-
 add_executable(nshead_pb_extension_server server.cpp ${PROTO_SRC} ${PROTO_HEADER})
-target_link_libraries(nshead_pb_extension_server brpc)
+
+if(EXAMPLE_LINK_SO)
+    target_link_libraries(nshead_pb_extension_client brpc)
+    target_link_libraries(nshead_pb_extension_server brpc)
+else()
+    target_link_libraries(nshead_pb_extension_client brpc_static ${DYNAMIC_LIB})
+    target_link_libraries(nshead_pb_extension_server brpc_static ${DYNAMIC_LIB})
+endif()
