--- a/example/redis_c++/CMakeLists.txt
+++ b/example/redis_c++/CMakeLists.txt
@@ -1,6 +1,11 @@
 add_executable(redis_cli redis_cli.cpp)
-target_link_libraries(redis_cli brpc)
-
 add_executable(redis_press redis_press.cpp)
-target_link_libraries(redis_press brpc)
+
+if(EXAMPLE_LINK_SO)
+    target_link_libraries(redis_cli brpc)
+    target_link_libraries(redis_press brpc)
+else()
+    target_link_libraries(redis_cli brpc_static ${DYNAMIC_LIB})
+    target_link_libraries(redis_press brpc_static ${DYNAMIC_LIB})
+endif()
 
