--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,17 +1,22 @@
 if(BUILD_UNIT_TESTS)
-    return()
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DUNIT_TEST -DBVAR_NOT_LINK_DEFAULT_VARIABLES")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DUNIT_TEST")
+elseif(NOT DEBUG)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DNDEBUG")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DNDEBUG")
 endif()
 
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 include_directories(${CMAKE_SOURCE_DIR}/src)
 
-add_library(OBJ_LIB OBJECT ${BUTIL_SOURCES} ${SOURCES})
+add_library(BUTIL_LIB OBJECT ${BUTIL_SOURCES})
+add_library(OBJ_LIB OBJECT ${SOURCES})
 
-# shared libraries need PIC
 set_property(TARGET ${OBJ_LIB} PROPERTY POSITION_INDEPENDENT_CODE 1)
+set_property(TARGET ${BUTIL_LIB} PROPERTY POSITION_INDEPENDENT_CODE 1)
 
-add_library(brpc SHARED $<TARGET_OBJECTS:OBJ_LIB>)
-add_library(brpc_static STATIC $<TARGET_OBJECTS:OBJ_LIB>)
+add_library(brpc SHARED $<TARGET_OBJECTS:BUTIL_LIB> $<TARGET_OBJECTS:OBJ_LIB>)
+add_library(brpc_static STATIC $<TARGET_OBJECTS:BUTIL_LIB> $<TARGET_OBJECTS:OBJ_LIB>)
 
 target_link_libraries(brpc ${DYNAMIC_LIB})
 
