add generating proto code to compatible with different version of cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -124,6 +124,27 @@ foreach(PROTO ${PROTOS})
     )
 endforeach()
 
+file(GLOB brpc_PROTOS "src/brpc/*.proto")
+foreach(PROTO ${brpc_PROTOS})
+    get_filename_component(PROTO_WE ${PROTO} NAME_WE)
+    list(APPEND PROTO_SRCS "${CMAKE_CURRENT_BINARY_DIR}/brpc/${PROTO_WE}.pb.cc")
+    execute_process(
+        COMMAND ${PROTOBUF_PROTOC_EXECUTABLE} ${PROTO_FLAGS} --cpp_out=${CMAKE_CURRENT_BINARY_DIR} --proto_path=${PROTOBUF_INCLUDE_DIR} --proto_path=${CMAKE_SOURCE_DIR}/src --proto_path=${CMAKE_SOURCE_DIR}/src/brpc/ ${PROTO}
+        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+    )
+endforeach()
+
+file(GLOB brpc_policy_PROTOS "src/brpc/policy/*.proto")
+foreach(PROTO ${brpc_policy_PROTOS})
+    get_filename_component(PROTO_WE ${PROTO} NAME_WE)
+    list(APPEND PROTO_SRCS "${CMAKE_CURRENT_BINARY_DIR}/brpc/policy/${PROTO_WE}.pb.cc")
+    execute_process(
+        COMMAND ${PROTOBUF_PROTOC_EXECUTABLE} ${PROTO_FLAGS} --cpp_out=${CMAKE_CURRENT_BINARY_DIR} --proto_path=${PROTOBUF_INCLUDE_DIR} --proto_path=${CMAKE_SOURCE_DIR}/src --proto_path=${CMAKE_SOURCE_DIR}/src/brpc/policy ${PROTO}
+        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+    )
+endforeach()
+
+# list all source files
 set(BUTIL_SOURCES
     ${CMAKE_SOURCE_DIR}/src/butil/third_party/dmg_fp/g_fmt.cc
     ${CMAKE_SOURCE_DIR}/src/butil/third_party/dmg_fp/dtoa_wrapper.cc
@@ -273,17 +294,24 @@ set(SOURCES
     ${PROTO_SRCS}
     )
 
-ADD_SUBDIRECTORY(src)
+add_subdirectory(src)
 if(BUILD_EXAMPLE)
-    ADD_SUBDIRECTORY(example)
+    add_subdirectory(example)
 endif()
 if(BUILD_UNIT_TESTS)
-    ADD_SUBDIRECTORY(test)
+    add_subdirectory(test)
 endif()
 
 install(DIRECTORY ${CMAKE_SOURCE_DIR}/src/
         DESTINATION include
         FILES_MATCHING 
+        PATTERN "*.h"
+        PATTERN "*.hpp"
+        )
+
+install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/
+        DESTINATION include
+        FILES_MATCHING
         PATTERN "*.h"
         PATTERN "*.hpp"
         )
